2004-04-05  njh <njh@mail.csse.monash.edu.au>

	* debian/rules,debian/control: applied patch from Kees Cook to remove
	obsolete libraries, and to tidy things up a tad.

2004-04-04  Ted Gould <ted@gould.cx>

	* src/main.cpp, src/extension/extension.cpp, src/extension/system.cpp:
	Now the input autodetect will try the SVG filter if the autodetect
	fails.  This was done by the command line, but now it is done
	everywhere.

2004-04-04  MenTaLguY <mental@rydia.net>

	* src/xml/repr-io.cpp, src/xml/repr.cpp, src/xml/repr.h:
	Take the full list of document node children from libxml, and
	append them in the correct order.  This fixes bug #929348.

	* src/xml/repr-io.cpp, src/xml/repr.cpp, src/xml/repr-private.h:
	Added API for coping with comments at the root level (i.e. siblings
	of the root XML node), and made corresponding changes to the repr-io
	code.  In theory this should be enough to preserve them upon loading, 
	though in practice it still doesn't appear to be working (bug #929348).
	Is there some libxml thing we need to do?

2004-04-04  Ted Gould <ted@gould.cx>

	* a bunch of files
	Sorry, I seem to be in some delay getting e-mail.  Anyway, a few
	files were changed to add in a new parameter 'dataloss'  Basically
	this signifies that a format was used to save that may not save
	the whole document and thus, a pop-up is elevated on close to signal
	that you might want to 'really save' this document.

2004-04-03  Ted Gould <ted@gould.cx>

	* share/extensions/svgz_input.inkmod, src/file.cpp,
      src/extension/extension.cpp, src/extension/internal/svg.cpp:
	Making it so that input extensions can specify the output extension
	that gets used to save them.  If this field isn't filled in, the value
	gets set to NULL, and then the Save As dialog is used instead of
	just trying to save.

2004-04-03  Ted Gould <ted@gould.cx>

	* src/file.cpp, src/main.cpp, src/extension/extension.cpp,
      src/extension/extension.h, src/extension/system.cpp,